infra/k8s/network-policies/network-policy-application.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-monitoring-and-ingress
  namespace: application
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring-namesapce
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: monitoring-namesapce
      ports:
        - protocol: TCP
          port: 3100
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
